--- a/src/App.scss
+++ b/src/App.scss
@@ -12,17 +12,24 @@
   position: relative;
   font-family: 'Gilroy-Light';
   text-align: center;
-  // width: 100vw;
-  // height: 100vh;
+  width: 100vw;
+  height: 100vh;
   
-  width: 57.6rem;
-  height: 102.4rem;
+  // width: 57.6rem;
+  // height: 102.4rem;
+
   background-image: 
   linear-gradient(to bottom, rgba(31, 25, 55, 0.8) 0%, rgb(31, 25, 55) 30%, rgb(31, 25, 55) 100%),
   url(./images/bg_image.jpg);
   background-position: center top;
   background-repeat: no-repeat;
   border: 1px solid black;
+
+  $breakpoint: 576px;
+  @media (min-width: $breakpoint) {
+    width: 57.6rem;
+    height: 102.4rem;
+  }
 }
 
 .more-enter {
