--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -2,22 +2,32 @@
     cursor: pointer;
     display: inline-flex;
     background-image: url('../../images/Play_inactive.png');
-    width: 16rem;
-    height: 17rem;
+    width: 30%;
+    max-width: 50%;
+    max-height: 17rem;
+    height: 500%;
     // max-width: 45%;
     position: relative;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    
+    @media (min-width: 576px) {
+        width: 16rem;
+        height: 17rem;
+    }
 }
 
 .inactive::after{
     position: absolute;
     pointer-events: none;
-    width: 150%;
-    height: 150%;
+    width: 160%;
+    height: 160%;
+    // max-height: 155%;
     // max-width: 100%;
     background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-image: url('../../images/Play_active.png');
     transform: translate(-50%,-50%);
     content:'';
