fixed playlist show button

--- a/src/components/Main/Slick/slider.scss
+++ b/src/components/Main/Slick/slider.scss
@@ -33,7 +33,8 @@ slick-slide {
     justify-self: center;
     align-self: center;
     width: 100%;
-    max-width: 80vw;
+    // max-width: 60vw;
+    // max-width: 100%;
     left: 0; right: 0;
     height: auto;
   }
